--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "browserify": "^5.9.1",
     "gulp": "^3.8.6",
     "gulp-ruby-sass": "^0.7.1",
+    "gulp-uglify": "^0.3.1",
     "pagedown": "^1.1.0",
     "vinyl-source-stream": "^0.1.1"
   }
