--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "gulp": "^3.8.6",
     "gulp-ruby-sass": "^0.7.1",
     "gulp-uglify": "^0.3.1",
-    "pagedown": "^1.1.0",
+    "marked": "^0.3.2",
     "vinyl-source-stream": "^0.1.1"
   }
 }
